[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[project]
name = "dbus2mqtt"
dynamic = ["version"]
description = """\
    General purpose DBus to MQTT bridge \
    - expose signals, methods and properties over MQTT \
    - featuring jinja based templating, payload enrichment and MPRIS / BlueZ / Home Assistant ready examples \
    """
readme = "README.md"
license = "MIT"
keywords = ["python", "mqtt", "jinja2", "bridge", "mpris", "dbus", "home-assistant", "bluez"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Topic :: Home Automation",

    # Supported Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.10"

dependencies = [
    "apscheduler==3.11.2",
    "dbus-fast==3.1.2",
    "jsonargparse[ruamel,signatures]==4.46.0",
    "paho-mqtt==2.1.0",
    "jinja2==3.1.6",
    "jinja2-ansible-filters==1.3.2",
    "colorlog>=6.9.0",
    "janus>=2.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "docstring-parser>=0.17.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.2",
    "pyright==1.1.408",
    "deptry>=0.24.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocstrings-python>=1.19.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "types-pyyaml>=6.0.12.20241230",
    "taskipy>=1.14.1",
    "pre-commit>=4.2.0",
    "pip>=25.0.1",
    "pytest-cov>=7.0.0",
    "jsonschema>=4.26.0",
    "packaging>=25.0",
]

[project.urls]
Documentation = "https://jwnmulder.github.io/dbus2mqtt"
Source = "https://github.com/jwnmulder/dbus2mqtt"
Issues = "https://github.com/jwnmulder/dbus2mqtt/issues"

[project.scripts]
dbus2mqtt = "dbus2mqtt.main:main"

[tool.coverage.run]
branch = true
relative_files = true
omit = ["tests/*"]

[tool.deptry]
exclude = [".venv", ".git", "tests", "tools"]

[tool.deptry.per_rule_ignores]
DEP003 = ["dbus2mqtt"]
DEP004 = ["mkdocs"]

[tool.taskipy.tasks]
lint-ruff = "ruff check"
lint-pyright = "pyright"

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
log_cli = true

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.ruff.format]
preview = true

[tool.ruff.lint]
extend-select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "SIM",   # flake8-simplify
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "D"      # pydocstyle rules
]
ignore = [
    "E501",  # line-too-long
    "D417",  # undocumented-param
    "D100",  # undocumented-public-module
    "D101",  # undocumented-public-class
    "D102",  # undocumented-public-method
    "D103",  # undocumented-public-function
    "D104",  # undocumented-public-package
    "D105",  # undocumented-public-package
    "D106",  # undocumented-public-nested-class
    "D107",  # undocumented-public-init
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"
